Added Exceptions and reformatted the code
