# api-spec/complexity-calculator-service-api-contract.yml
@@ -28,7 +28,7 @@ paths:
             schema:
               $ref: '#/components/schemas/ComplexityCalculatorRequest'
             example:
-              opportunityId: 12345
+              opportunityId: '12345'
               customerAddress:
                 address1: Some Apartment 3
                 address2: That building, This Block
@@ -93,7 +93,7 @@ paths:
                               SpaceID: ABC234
                             - Complexity: '5'
                               SpaceID: ABC231
-                  OpportunityID: '12345'
+                  opportunityID: '12345'
         '400':
           description: Bad Request/Invalid input
         '500':
@@ -102,9 +102,13 @@ components:
   schemas:
     ComplexityCalculatorRequest:
       required:
+        - opportunityId
         - Job
       type: object
       properties:
+        opportunityId:
+          type: string
+          minLength: 1
         Job:
           $ref: '#/components/schemas/Job'
     Job:
